# audio-toolchain

./: README.md  pyproject.toml  setup.cfg
lib/krautcat/audio/: converter.py  cuesplitter.py  exceptions.py  fs.py
lib/krautcat/audio/file/: cuesheet.py  mime.py
lib/krautcat/audio/file/audio/: __init__.py  alac.py  flac.py  generic.py  mp3.py
lib/krautcat/audio/metadata/: __init__.py  flac.py  generic.py  mp3.py  tags.py  types.py
lib/krautcat/audio/musicbrainz/: __init__.py
lib/krautcat/gstreamer/: __init__.py
lib/krautcat/ui/: formatter.py  tui.py
