[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krautcat-audio-toolchain"
dynamic = ["version"]
license = ""
dependencies = [
    "mutagen",
    "psutil",
]

[project.scripts]
krautcat-converter = "krautcat.audio.converter:main"
krautcat-cuesplitter = "krautcat.audio.cuesplitter:main"
krautcat-dirnamer = "krautcat.audio.library.fs.dirnamer:main"
krautcat-tagger = "krautcat.audio.library.tagger:main"

[tool.hatch.version]
path = "lib/krautcat/audio/__init__.py"

[tool.hatch.build]
sources = [
    "lib"
]

[tool.hatch.build.targets.sdist]
include = [
    "lib/*",
]

[tool.hatch.build.targets.wheel]
packages = [
    "lib/krautcat",
]

