[metadata]
name = krautcat-audio-library-fs-dirnamer 
version = 0.0.1

[options]
install_requires =
    mutagen
    psutil

packages = find:
package_dir = 
    = lib

[options.packages.find]
where = lib

[options.entry_points]
console_scripts = 
    krautcat-dirnamer = krautcat.audio.library.fs.dirnamer:main
    krautcat-tagger = krautcat.audio.library.tagger:main
    krautcat-cuesplitter = krautcat.audio.cuesplitter:main
    krautcat-converter = krautcat.audio.converter:main
